[package]
name = "polycsv"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2018"
description = "CLI to download polygon.io tick data to csv"

[dependencies]
chrono = "0.4"
threadpool = "1.8.1"
polygon_io = "3.2.2"
csv = "1.1"
zstd = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
linya = "0.3.0"
fern = "0.6.1"
log = "0.4.17"

[profile.release]
debug = true

